[gd_scene load_steps=11 format=3 uid="uid://wnw5wubuaomj"]

[ext_resource type="Script" path="res://World/save_point.gd" id="1_apuup"]
[ext_resource type="Texture2D" uid="uid://b6vomo0msjbxo" path="res://World/assets/save_point/1.png" id="1_tm8gu"]
[ext_resource type="Texture2D" uid="uid://bbi53lo10cl6u" path="res://World/assets/save_point/2.png" id="2_i06en"]
[ext_resource type="Texture2D" uid="uid://dy6lqprx2wiw0" path="res://World/assets/save_point/3.png" id="3_hx48t"]
[ext_resource type="Texture2D" uid="uid://nk230bfabr0u" path="res://World/assets/save_point/4.png" id="4_wsfbo"]
[ext_resource type="Texture2D" uid="uid://ynbp75ehpwa5" path="res://World/assets/save_point/5.png" id="5_ijoav"]
[ext_resource type="Texture2D" uid="uid://bfas4k7w2vvy" path="res://World/assets/save_point/6.png" id="6_6gdec"]
[ext_resource type="Texture2D" uid="uid://mk1uomwrd7fs" path="res://World/assets/save_point/light.png" id="7_31b71"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vnuv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tm8gu")
}, {
"duration": 1.0,
"texture": ExtResource("2_i06en")
}, {
"duration": 1.0,
"texture": ExtResource("3_hx48t")
}, {
"duration": 1.0,
"texture": ExtResource("4_wsfbo")
}, {
"duration": 1.0,
"texture": ExtResource("5_ijoav")
}, {
"duration": 1.0,
"texture": ExtResource("6_6gdec")
}],
"loop": false,
"name": &"activated",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tm8gu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqa7y"]
radius = 66.0076

[node name="Save_point" type="Area2D"]
script = ExtResource("1_apuup")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -18)
sprite_frames = SubResource("SpriteFrames_vnuv8")
animation = &"activated"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 23)
energy = 0.0
texture = ExtResource("7_31b71")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_aqa7y")

[node name="Save_cd" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Save_cd" to="." method="_on_save_cd_timeout"]
